fix: trigger button overflow

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -37,7 +37,7 @@ i.trigger {
   height: 64px;
   cursor: pointer;
   transition: all 0.3s, padding 0s;
-  padding: 24px;
+  padding: 22px 24px;
   &:hover {
     background: @primary-1;
   }
@@ -106,7 +106,7 @@ i.trigger {
       display: none;
     }
     i.trigger {
-      padding: 24px 12px;
+      padding: 22px 12px;
     }
     .logo {
       padding-right: 12px;
